<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/fundomain"
    android:orientation="vertical"
    tools:context=".MainActivity">

     <ImageView
        android:layout_width="400dp"
        android:layout_height="380dp"
        android:src="@drawable/beetle_driver"
        android:contentDescription="@string/maintitulo" />



    <TextView
        android:layout_width="195dp"
        android:layout_height="59dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/bebas_neue"
        android:scaleY="1.2"
        android:text="@string/car"
        android:textColor="@color/design_default_color_background"
        android:textSize="60sp"
        app:drawableStartCompat="@android:drawable/ic_menu_mylocation"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/scrolltest"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageButton
                android:id="@+id/ib_enredo"
                android:layout_width="443dp"
                android:layout_height="280dp"
                android:layout_marginStart="-10dp"
                android:background="@null"
                android:contentDescription="@string/enredo"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/main4" />

            <ImageButton

                android:id="@+id/ib_inimigo"
                android:layout_width="443dp"
                android:layout_height="209dp"
                android:layout_marginStart="-10dp"
                android:layout_marginTop="-5dp"
                android:background="@null"
                android:contentDescription="@string/inimigo"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/pol_cia" />

            <ImageButton

                android:id="@+id/ib_gameplay"
                android:layout_width="443dp"
                android:layout_height="235dp"
                android:layout_marginStart="-10dp"
                android:layout_marginTop="-5dp"
                android:background="@null"
                android:contentDescription="@string/gameplay"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/pngwing_com__1_" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>