<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundooooo">

    <ImageButton
        android:id="@+id/ib_voltar"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="0dp"
        android:background="@null"
        android:contentDescription="@string/sair"
        app:srcCompat="?attr/homeAsUpIndicator"
        app:tint="@color/amarelo" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-50dp"
        android:layout_marginTop="50dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView

                android:layout_width="367dp"
                android:layout_height="100dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/titulo"
                app:srcCompat="@drawable/enemy"
                tools:ignore="ImageContrastCheck" />

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/games"
                app:srcCompat="@drawable/policia" />

            <TextView

                android:layout_width="388dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/alata"
                android:gravity="center"
                android:text="@string/inimigostext"
                android:textColor="@color/design_default_color_background"
                android:textSize="24sp"
                tools:ignore="RtlHardcoded,TextSizeCheck" />

            <ImageButton
            android:id="@+id/btnspotify"
            android:layout_width="270dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:background="@null"
            android:contentDescription="@string/spotify"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/spoti" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>